--- a/index.html
+++ b/index.html
@@ -1595,7 +1595,7 @@
                 <!-- Section title end -->
                 
                 <!-- from inner start-->
-                  <form action="https://formsubmit.co/davidngurikanr@gmail.com" method="POST">
+                  <form action="https://formsubmit.co/davidngurikan@gmail.com" method="POST">
                       <div class="grid grid-cols-2 gap-7">
                           <div>
                             <input class="w-full bg-white rounded px-5 py-2 h-11 dark:bg-transparent dark:text-slate-300 dark:border dark:border-slate-600" type="text" name="name" placeholder="Your name" required>
